--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20260222181115">
+	<link rel="stylesheet" href="css/style.min.css?_v=20260224184447">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js?_v=20260222181115"></script> -->
-	<!-- <script src="js/files/jquery.rotating-slider.min.js?_v=20260222181115"></script> -->
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js?_v=20260224184447"></script> -->
+	<!-- <script src="js/files/jquery.rotating-slider.min.js?_v=20260224184447"></script> -->
 </head>
 
 <body style="display: none;">
@@ -935,8 +935,9 @@
 							<div class="inner-parallax">
 
 								<div class="inner-parallax__layers parallax-layers">
-									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-one.jpg);" data-swiper-parallax="30%"></div>
-									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-one-2.png);" data-swiper-parallax="22%"></div>
+									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-one.jpg);" data-swiper-parallax="40%"></div>
+									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-one-2.png);" data-swiper-parallax="30%"></div>
+									<canvas class="particles parallax-layers__layer" data-color="#00eeff" data-swiper-parallax="20%"></canvas>
 									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-one-3.png);" data-swiper-parallax="10%"></div>
 								</div>
 
@@ -981,13 +982,21 @@
 									</div>
 
 									<div class="inner-parallax__content">
-										<div class="inner-parallax__text">Lorem ipsum, dolor sit amet consectetur
-											adipisicing elit.
-											At quis, pariatur dignissimos iste culpa, rerum perferendis dolorem veniam
-											sit
-											consectetur voluptatum voluptatibus fugiat quo consequatur, id reiciendis
-											rem tenetur
-											facilis?</div>
+										<div class="inner-parallax__text">
+											<h3>Врываюсь в IT слегка за 30</h3>
+											<p>
+												Приветствую. Меня зовут Денис. Я из города Норильск. Мне 39 лет. В
+												какой-то
+												момент открыл для себя чудесный мир
+												веб-разработки, и решил связать жизнь с этой профессией. Набиваю руку,
+												готов
+												учиться. Занимаюсь веб-разработкой около
+												двух лет.
+												Ответственный, пунктуальный, усидчивый, обучаемый, настырный, склонен к
+												перфекционизму.
+												Созидание и творчество - моё всё.
+											</p>
+										</div>
 									</div>
 
 									<button type="button" class="inner-parallax__more-btn actives">
@@ -1014,6 +1023,14 @@
 						</div>
 						<div class="section--parallax__slide swiper-slide">
 							<div class="inner-parallax">
+
+								<div class="inner-parallax__layers parallax-layers">
+									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-three.jpg);" data-swiper-parallax="40%"></div>
+									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-three-2.png);" data-swiper-parallax="30%"></div>
+									<canvas class="particles parallax-layers__layer" data-color="#00eeff" data-swiper-parallax="20%"></canvas>
+									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-three-3.png);" data-swiper-parallax="10%"></div>
+								</div>
+
 								<div class="inner-parallax__container">
 									<div class="letters">
 										<div class="letters__wrapper">
@@ -1074,41 +1091,33 @@
 						<div class="section--parallax__slide swiper-slide">
 							<div class="inner-parallax">
 
+								<div class="inner-parallax__layers parallax-layers">
+									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-two.jpg);" data-swiper-parallax="40%"></div>
+									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-two-2.png);" data-swiper-parallax="30%"></div>
+									<canvas class="particles parallax-layers__layer" data-color="#00eeff" data-swiper-parallax="20%"></canvas>
+									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-two-3.png);" data-swiper-parallax="10%"></div>
+								</div>
+
 								<div class="inner-parallax__container">
 									<div class="letters">
 										<div class="letters__wrapper">
-											<div class="letters__letter letters__letter--left">
-												<img class="letters__item" src="img/letters/pp.png" alt="img">
-											</div>
 											<div style="width: 36px;" class="letters__letter letters__letter--up">
 												<img class="letters__item" src="img/letters/rr.png" alt="img">
 											</div>
-											<div class="letters__letter letters__letter--left">
-												<img class="letters__item" src="img/letters/ii.png" alt="img">
+											<div class="letters__letter letters__letter--down">
+												<img class="letters__item" src="img/letters/aa.png" alt="img">
 											</div>
 											<div class="letters__letter letters__letter--left">
-												<img class="letters__item" src="img/letters/vv.png" alt="img">
+												<img class="letters__item" src="img/letters/bb.png" alt="img">
 											</div>
-											<div style="width: 36px;" class="letters__letter letters__letter--up">
-												<img class="letters__item" src="img/letters/ee.png" alt="img">
+											<div style="width: 36px;" class="letters__letter letters__letter--right">
+												<img class="letters__item" src="img/letters/oo.png" alt="img">
 											</div>
 											<div class="letters__letter letters__letter--down">
 												<img class="letters__item" src="img/letters/tt.png" alt="img">
 											</div>
-											<div class="letters__letter letters__letter--left">
-												<img class="letters__item" src="img/letters/ss.png" alt="img">
-											</div>
-											<div class="letters__letter letters__letter--down">
-												<img class="letters__item" src="img/letters/tt.png" alt="img">
-											</div>
-											<div class="letters__letter letters__letter--left">
-												<img class="letters__item" src="img/letters/vv.png" alt="img">
-											</div>
-											<div class="letters__letter letters__letter--left">
-												<img class="letters__item" src="img/letters/uu.png" alt="img">
-											</div>
-											<div style="width: 47px;" class="letters__letter letters__letter--right">
-												<img class="letters__item" src="img/letters/yy.png" alt="img">
+											<div style="width: 50px;" class="letters__letter letters__letter--left">
+												<img class="letters__item" src="img/letters/yiyi.png" alt="img">
 											</div>
 
 										</div>
@@ -1149,41 +1158,39 @@
 						<div class="section--parallax__slide swiper-slide">
 							<div class="inner-parallax">
 
+								<div class="inner-parallax__layers parallax-layers">
+									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-five.png);" data-swiper-parallax="40%"></div>
+									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-five-2.png);" data-swiper-parallax="30%"></div>
+									<canvas class="particles parallax-layers__layer" data-color="#00eeff" data-swiper-parallax="20%"></canvas>
+									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-five-3.png);" data-swiper-parallax="10%"></div>
+								</div>
+
 								<div class="inner-parallax__container">
 									<div class="letters">
 										<div class="letters__wrapper">
-											<div class="letters__letter letters__letter--left">
-												<img class="letters__item" src="img/letters/pp.png" alt="img">
+											<div class="letters__letter letters__letter--right">
+												<img class="letters__item" src="img/letters/kk.png" alt="img">
 											</div>
-											<div style="width: 36px;" class="letters__letter letters__letter--up">
-												<img class="letters__item" src="img/letters/rr.png" alt="img">
-											</div>
-											<div class="letters__letter letters__letter--left">
-												<img class="letters__item" src="img/letters/ii.png" alt="img">
+											<div style="width: 36px;" class="letters__letter letters__letter--right">
+												<img class="letters__item" src="img/letters/oo.png" alt="img">
 											</div>
 											<div class="letters__letter letters__letter--left">
-												<img class="letters__item" src="img/letters/vv.png" alt="img">
-											</div>
-											<div style="width: 36px;" class="letters__letter letters__letter--up">
-												<img class="letters__item" src="img/letters/ee.png" alt="img">
+												<img class="letters__item" src="img/letters/nn.png" alt="img">
 											</div>
 											<div class="letters__letter letters__letter--down">
 												<img class="letters__item" src="img/letters/tt.png" alt="img">
 											</div>
-											<div class="letters__letter letters__letter--left">
-												<img class="letters__item" src="img/letters/ss.png" alt="img">
+											<div style="width: 36px;" class="letters__letter letters__letter--down">
+												<img class="letters__item" src="img/letters/aa.png" alt="img">
+											</div>
+											<div class="letters__letter letters__letter--right">
+												<img class="letters__item" src="img/letters/kk.png" alt="img">
 											</div>
 											<div class="letters__letter letters__letter--down">
 												<img class="letters__item" src="img/letters/tt.png" alt="img">
 											</div>
-											<div class="letters__letter letters__letter--left">
-												<img class="letters__item" src="img/letters/vv.png" alt="img">
-											</div>
-											<div class="letters__letter letters__letter--left">
-												<img class="letters__item" src="img/letters/uu.png" alt="img">
-											</div>
-											<div style="width: 47px;" class="letters__letter letters__letter--right">
-												<img class="letters__item" src="img/letters/yy.png" alt="img">
+											<div style="width: 50px;" class="letters__letter letters__letter--left">
+												<img class="letters__item" src="img/letters/yiyi.png" alt="img">
 											</div>
 
 										</div>
@@ -1241,7 +1248,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20260222181115"></script>
+	<script src="js/app.min.js?_v=20260224184447"></script>
 	<div id="popup-violet" aria-hidden="true" class="popup">
 		<div class="popup__wrapper">
 			<div class="popup__content">
